<resources>
    <string name="app_name">Android_Project_2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there">Hi there,</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save_title">Save Your Place</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="share_title_text">Share your favourite locations with your loved ones.</string>
    <string name="share_btn_text">Share Location</string>
    <string name="team_members">Team Members</string>
    <string name="darshan_nariya">Darshan Nariya</string>
    <string name="abhiraj_shourya">Abhiraj Shourya</string>
    <string name="tan_le">Tan Le</string>

    <!--    home-->


    <!--    map-->
    <string name="map">Map</string>
    <string name="save_location">Save Location</string>


<!--    menu-->
    <string name="menu">Menu</string>
    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_places">Places</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
</resources>