<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/map"
                android:title="@string/menu_map" />
            <item
                android:id="@+id/places"
                android:title="@string/menu_places" />
            <item
                android:id="@+id/share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/about"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>