<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_members"
                android:textAlignment="center"
                android:textColor="?attr/colorOnBackground"
                android:textSize="32sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/darshan_nariya" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/abhiraj_shourya" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="150dp"
                android:textSize="30sp"
                android:text="@string/tan_le"
                android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>