<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DialogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dialogTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_title"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="Please enter the address details!"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etTitle"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="textCapWords">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvErrorMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="* Please enter Title!"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etDesc"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textCapWords">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/saveBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/save"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp"/>

<!--                    <TextView-->
<!--                        android:id="@+id/saveBtn"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginEnd="4dp"-->
<!--                        android:layout_weight="0.5"-->
<!--                        android:gravity="center"-->
<!--                        android:padding="15dp"-->
<!--                        android:text="@string/save"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textStyle="bold"-->
<!--                        app:cornerRadius="8dp"-->
<!--                        />-->

                    <Button
                        android:id="@+id/cancelBtn"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/cancel"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

<!--                    <TextView-->
<!--                        android:id="@+id/cancelBtn"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginStart="4dp"-->
<!--                        android:layout_weight="0.5"-->
<!--                        android:gravity="center"-->
<!--                        android:padding="15dp"-->
<!--                        android:text="@string/cancel"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textStyle="bold"-->
<!--                        app:cornerRadius="8dp" />-->
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

</LinearLayout>